--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <h1>我的最爱唱跳明星</h1>
 <h2>鲲鲲</h2>
 <p>擅长唱、跳、rap、篮球</p>
-<p font-weight=“bold”; >巅峰产生虚伪的拥护，黄昏见证真正的使徒</p>
+<strong>巅峰产生虚伪的拥护，黄昏见证真正的使徒</strong>
 <h3> <a href="https://www.bilibili.com/video/BV1J4411v7g6/?spm_id_from=333.788.recommend_more_video.9&vd_source=11257a86fb1abf08a137f4d13b9aab8a" >【我永远是鲲鲲最虔诚的信徒】</a></h3>
 </div>
 <img class="mar1" src="images/box01.jpg" />
