--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <p>国内知名的视频弹幕网站</p>
 <p>这里有及时的动漫新番，活跃的ACG氛围，有创意的Up 主</p>
 <h3>
- <a href="https://www.bilibili.com/">【点击跳转】</a>
+ <a href="https://www.bilibili.com/" class="link">【点击跳转】</a>
 </h3>
 </div>
 <div class="bx1">
@@ -66,7 +66,7 @@
 <p>四代唯一登顶女团</p>
 <p>传唱度极高的音乐，富有感染力的唱跳，时刻为观众带来欢笑与活力</p>
 <h3>
- <a href="https://www.bilibili.com/video/BV1W44y1h7HE/?spm_id_from=333.999.0.0&vd_source=11257a86fb1abf08a137f4d13b9aab8a">【我珍藏的twice百万直拍】</a>
+ <a href="https://www.bilibili.com/video/BV1W44y1h7HE/?spm_id_from=333.999.0.0&vd_source=11257a86fb1abf08a137f4d13b9aab8a" class="link">【我珍藏的twice百万直拍】</a>
 </h3>
 </div>
 <div class="bx1">
@@ -74,7 +74,7 @@
 <h2>鲲鲲</h2>
 <p>擅长唱、跳、rap、篮球</p>
 <strong>巅峰产生虚伪的拥护，黄昏见证真正的使徒</strong>
-<h3> <a href="https://www.bilibili.com/video/BV1J4411v7g6/?spm_id_from=333.788.recommend_more_video.9&vd_source=11257a86fb1abf08a137f4d13b9aab8a" >【我永远是鲲鲲最虔诚的信徒】</a></h3>
+<h3> <a href="https://www.bilibili.com/video/BV1J4411v7g6/?spm_id_from=333.788.recommend_more_video.9&vd_source=11257a86fb1abf08a137f4d13b9aab8a" class="link">【我永远是鲲鲲最虔诚的信徒】</a></h3>
 </div>
 <img class="mar1" src="images/box01.jpg" />
 </div>
