--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="bx1">
 <h1>我的最爱团体组合</h1>
 <h2>TWICE</h2>
-<p>四代唯一登顶女团</p>
+<p>四代顶尖女团之一</p>
 <p>传唱度极高的音乐，富有感染力的唱跳，时刻为观众带来欢笑与活力</p>
 <h3>
  <a href="https://www.bilibili.com/video/BV1W44y1h7HE/?spm_id_from=333.999.0.0&vd_source=11257a86fb1abf08a137f4d13b9aab8a" class="link">【我珍藏的twice百万直拍】</a>
